Fixed article image overflow

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -1,12 +1,14 @@
 .app-container {
   max-width: 480px;
-  margin: 0.5rem 1rem 0 1rem;
+  // Center all content on page
+  margin: 0.5rem auto 0 auto;
+  display: block;
   &__header {
     flex: 0 0 100%;
   }
 
   &__body {
-
+  
   }
 
   &__footer {
