--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,13 +1,13 @@
 .navigation {
   list-style: none;
   display: flex;
+  justify-content: space-between;
   margin: 1rem 0 1.5rem 0;
   padding: 0;
   font-weight: 300;
 
   &__item {
     display: block;
-    flex: 1 1 100%;
     text-align: center;
 
     &--active{
